# travel_shop

./: .gitignore  manage.py  poetry_commands  pyproject.toml
core/: admin.py  data_migration.py  forms.py  urls.py  views.py
core/management/commands/: generate_test_data.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  auth.py  site_models.py
core/static/core/css/: style.css
core/templates/core/: auth.html  base.html  index.html
scripts/: init.bat
static/core/js/: get_data.js
templates/core/: base.html  cities.html  countries.html  date_voucher.html  hotels.html  index.html  login.html  registration.html  rooms.html
travel_shop/: asgi.py  settings.py  urls.py  wsgi.py
